codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__chat_composer__tests__multiple_pastes.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"› [Pasted Content 1003 chars][Pasted Content 1007 chars] another short paste                        "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
"                                                                                                    "
